# jui

./: .gitignore  Cargo.toml  Readme.md  build.rs  included_library.rs  version.rs
libs/jui_file/: Cargo.toml  Readme.md
libs/jui_file/src/: lib.rs
libs/jui_file/src/write/: mod.rs
src/: jui_config.rs  lib.rs  surrealism_ui.rs
src/surrealism_ui/: mod.rs  surrealism_url.rs
widgets/: button.slint  checkbox.slint  index.slint  test.slint
widgets/button/: button.slint  button_base.slint  button_down.slint  button_img.slint  button_left.slint  button_opt.slint  button_opt_base.slint  button_opt_list.slint  button_right.slint  button_round.slint  button_up.slint  opt_button.slint
widgets/collapse/: collapse.slint  collapsible.slint
widgets/combobox/: combobox.slint
widgets/data/: position.slint
widgets/datetime/: choose_controller.slint  choose_header.slint  common_body.slint  datetime.slint  datetime_body.slint  datetime_data.slint  datetime_down.slint  datetime_left.slint  datetime_picker.slint  datetime_right.slint  datetime_up.slint  day_body.slint  function_button.slint  hour_body.slint  minute_body.slint  month_body.slint  month_pickers.slint  number_pickers.slint  time_pickers.slint  year_body.slint  year_pickers.slint
widgets/drawer/: drawer.slint  drawer_bottom.slint  drawer_common.slint  drawer_custom.slint  drawer_left.slint  drawer_right.slint  drawer_top.slint
widgets/event/: space_enter.slint  touch_space_enter.slint
widgets/icons/: icon_close.slint
widgets/input/: border_input.slint  input.slint  input_base.slint  underline_input.slint
widgets/message/: confirm.slint  mask.slint  tag.slint
widgets/nav/: tabs.slint
widgets/radio/: radio.slint
