[package]
name = "jui"
version = "0.2.4"
edition = "2021"
description = "jui is a ui set based on slint"
readme = "Readme.md"
authors = ["The jui developers"]
license = "MIT/Apache-2.0"
keywords = ["gui", "slint"]
categories = ["gui"]
repository = "https://github.com/lifeRobot/jui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint-build = "1.9.1"
cbsk_file = "2.0.6"
#jui_file = "0.1.25"
#jui_file = { path = "./libs/jui_file" }

cbsk_base = { version = "2.0.6", optional = true }
#cbsk_base = { path = "../cbsk/libs/cbsk_base", optional = true }
reqwest = { version = "0.12.9", features = ["blocking"], optional = true }
zip = { version = "2.2.2", default-features = false, features = ["deflate"], optional = true }

[features]
# support SurrealismUI, you can use @surrealism import
surrealism_ui = ["reqwest", "cbsk_base/anyhow", "zip"]