[package]
name = "jui"
version = "0.2.6"
edition = "2021"
description = "jui is a ui set based on slint"
readme = "Readme.md"
authors = ["The jui developers"]
license = "MIT/Apache-2.0"
keywords = ["gui", "slint"]
categories = ["gui"]
repository = "https://github.com/lifeRobot/jui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint-build = "1.12.1"
cbsk_file = "2.1.3"

cbsk_base = { version = "2.1.2", optional = true }
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
zip = { version = "4.5.0", default-features = false, features = ["deflate"], optional = true }

[features]
# support SurrealismUI, you can use @surrealism import
surrealism_ui = ["reqwest", "cbsk_base/anyhow", "zip"]
