[package]
name = "jui_file"
version = "0.1.0"
edition = "2021"
description = "jui_file is a simple file tool"
readme = "Readme.md"
authors = ["The jui developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbsk_base = { version = "0.1.5", features = ["macro", "log"] }